istio-teaching/gateway-api/manifest/tlsroute/nginx-deploy-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-v2
  labels:
    run: my-nginx-v2
spec:
  ports:
  - port: 443
    name: https-nginx-v2
    protocol: TCP
  selector:
    run: my-nginx-v2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-v2
spec:
  selector:
    matchLabels:
      run: my-nginx-v2
  replicas: 1
  template:
    metadata:
      labels:
        run: my-nginx-v2
    spec:
      containers:
      - name: my-nginx
        image: nginx
        ports:
        - containerPort: 443
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx
          readOnly: true
        - name: nginx-server-certs
          mountPath: /etc/nginx-server-certs
          readOnly: true
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-configmap
      - name: nginx-server-certs
        secret:
          secretName: nginx-server-certs
