istio-teaching/gateway-api/manifest/tlsroute/bookinfo-tlsroute-listeners-tls-mode-Passthrough.yaml
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: bookinfo
spec:
  gatewayClassName: istio
  listeners:  
  - hostname: "*"
    port: 443
    protocol: TLS
    tls:
      mode: Passthrough
    routes:
      namespaces:
        from: All
      selector:
        matchLabels:
          gateway: bookinfo
      kind: TLSRoute
