istio-teaching/gateway-api/manifest/tlsroute/nginx-tls-route-gateways-all-FromList.yaml
kind: TLSRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: nginx
  labels:
    gateway: bookinfo
spec:
  gateways:
    allow: FromList
    gatewayRefs:
    - name: bookinfo
      namespace: istio-system
  rules:
  - forwardTo:
    - serviceName: my-nginx
      port: 443
