istio-teaching/gateway-api/manifest/tlsroute/nginx-tls-route-matches-snis-semi-star.yaml
kind: TLSRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: nginx
  labels:
    gateway: bookinfo
spec:
  gateways:
    allow: All
  rules:
  - forwardTo:
    - serviceName: my-nginx
      port: 443
    matches:
    - snis:
      - “*.com”
